--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -57,9 +57,9 @@
             android:layout_margin="4dp"
             android:hint="@string/login_password"
             app:endIconMode="password_toggle"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            app:errorEnabled="true"
             >
-
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/password_edit_text"
                 android:layout_width="match_parent"
@@ -67,8 +67,30 @@
                 android:inputType="textPassword"
                 android:maxLines="1"
                 />
-
         </com.google.android.material.textfield.TextInputLayout>
-
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/login_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:text="@string/login_button"
+                style="@style/Widget.MaterialComponents.Button"
+                />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/login_cancel_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="12dp"
+                android:layout_marginRight="12dp"
+                android:layout_toStartOf="@+id/login_button"
+                android:layout_toLeftOf="@+id/login_button"
+                android:text="@string/login_cancel_button"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                />
+        </RelativeLayout>
     </LinearLayout>
 </ScrollView>
