--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -24,7 +24,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="70dp"
-        app:cardBackgroundColor="@color/purple_200"
+        app:cardBackgroundColor="@color/blue_200"
         app:cardCornerRadius="4dp"
         app:cardElevation="@dimen/cardview_default_elevation"
         >
