--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -15,6 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="56dp"
             app:title="@string/app_name"
+            app:titleTextColor="@color/black"
             />
     </com.google.android.material.appbar.AppBarLayout>
     <com.google.android.material.card.MaterialCardView
