--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -22,7 +22,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="50dp"
             android:layout_marginBottom="16dp"
-            app:srcCompat="@drawable/undraw" />
+            app:srcCompat="@drawable/shoes" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -30,8 +30,8 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="132dp"
             android:text="@string/app_name"
-            android:textAllCaps="true"
-            android:textSize="16sp" />
+            android:textAppearance="@style/TextAppearance.Evc2.Title"
+            />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/username_text_input"
